--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,15 +187,13 @@ list(
         absl::strings_internal
         absl::synchronization
         absl::time
-        absl::status
-        absl::utility)
+        absl::status)
 
 list(APPEND ICU_LIBS icui18n icuio icuuc icudata)
 list(APPEND file_based_test_driver_LIBS
         alternations
         test_case_options
         test_case_outputs
-        file_based_test_driver
         test_case_mode
         logging
         path
@@ -203,14 +201,15 @@ list(APPEND file_based_test_driver_LIBS
         unified_diff_oss
         ret_check
         )
-set(ZETASQL_LIBS zetasql
-    re2
-    ${ICU_LIBS}
-    ${Protobuf_LIBRARIES}
-    ${ABSL_LIBS}
-    date_proto
-    timeofday_proto
-    latlng_proto
+set(ZETASQL_LIBS
+        zetasql
+        ${file_based_test_driver_LIBS}
+        ${ABSL_LIBS}
+        re2
+        ${ICU_LIBS}
+        date_proto
+        timeofday_proto
+        latlng_proto
     )
 if (PYSDK_ENABLE)
     set(Python_ADDITIONAL_VERSIONS "3.8;3.7;3.6;3.5;2.7" CACHE STRING "Python to use for binding")
