--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -60,21 +60,21 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
-				<projectVersionFromProfile>${default.project.version}-SNAPSHOT</projectVersionFromProfile>
+				<projectVersionFromProfile>${default.project.version}</projectVersionFromProfile>
 				<hybridseCommonVersionFromProfile>${default.hybridse.sdk.version}</hybridseCommonVersionFromProfile>
 			</properties>
 		</profile>
 		<profile>
 			<id>macos</id>
 			<properties>
-				<projectVersionFromProfile>${default.project.version}-macos-SNAPSHOT</projectVersionFromProfile>
+				<projectVersionFromProfile>${default.project.version}-macos</projectVersionFromProfile>
 				<hybridseCommonVersionFromProfile>${default.hybridse.sdk.version}-macos</hybridseCommonVersionFromProfile>
 			</properties>
 		</profile>
 		<profile>
 			<id>allinone</id>
 			<properties>
-				<projectVersionFromProfile>${default.project.version}-allinone-SNAPSHOT</projectVersionFromProfile>
+				<projectVersionFromProfile>${default.project.version}-allinone</projectVersionFromProfile>
 				<hybridseCommonVersionFromProfile>${default.hybridse.sdk.version}-allinone</hybridseCommonVersionFromProfile>
 			</properties>
 		</profile>
