fix: insert table syntax fix

--- a/cases/integration/v1/test_create.yaml
+++ b/cases/integration/v1/test_create.yaml
@@ -444,7 +444,11 @@ cases:
     sql: |
       create table {auto} (
       c1 string, c3 int, c4 bigint, c5 float, c6 double, c7 timestamp, c8 date,
-      index(key=(c3),ts=c4)) replicanum=2, distribution(leader="{tb_endpoint_0}", follower="{tb_endpoint_0}");
+      index(key=(c3),ts=c4)) OPTIONS(
+        replicanum=2,
+        distribution = [
+          ("{tb_endpoint_0}", ["{tb_endpoint_0}"])
+        ]) ;
     expect:
       success: false
   -
