--- a/cases/integration/fz_ddl/test_luoji.yaml
+++ b/cases/integration/fz_ddl/test_luoji.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-db: luoji
+db: luoji_{auto}
 cases:
 - id: 0
   desc: luoji test
