--- a/cases/integration/v1/test_create.yaml
+++ b/cases/integration/v1/test_create.yaml
@@ -397,6 +397,7 @@ cases:
   -
     id: 38
     desc: create with replica num
+    mode: standalone-unsupport
     sql: |
       create table {auto} (
       c1 string, c3 int, c4 bigint, c5 float, c6 double, c7 timestamp, c8 date,
@@ -406,6 +407,7 @@ cases:
   -
     id: 39
     desc: create with replica num and distribution
+    mode: standalone-unsupport
     sql: |
       create table {auto} (
       c1 string, c3 int, c4 bigint, c5 float, c6 double, c7 timestamp, c8 date,
@@ -415,6 +417,7 @@ cases:
   -
     id: 40
     desc: create with replica num and distribution
+    mode: standalone-unsupport
     sql: |
       create table {auto} (
       c1 string, c3 int, c4 bigint, c5 float, c6 double, c7 timestamp, c8 date,
@@ -424,6 +427,7 @@ cases:
   -
     id: 41
     desc: create with replica num and distribution
+    mode: standalone-unsupport
     sql: |
       create table {auto} (
       c1 string, c3 int, c4 bigint, c5 float, c6 double, c7 timestamp, c8 date,
@@ -496,6 +500,7 @@ cases:
   -
     id: 49
     desc: create with partition num
+    mode: standalone-unsupport
     sql: |
       create table {auto} (
       c1 string, c3 int, c4 bigint, c5 float, c6 double, c7 timestamp, c8 date,
