--- a/cases/plan/cmd.yaml
+++ b/cases/plan/cmd.yaml
@@ -16,9 +16,23 @@ cases:
   - id: 1
     desc: CREATE DATABASE db1
     sql: CREATE DATABASE db1;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: create database
+          +-args: db1
   - id: 2
     desc: CREATE TABLE
     sql: CREATE TABLE schema.sql;
+    expect:
+      node_tree_str: |
+        +-node[CREATE]
+          +-table: schema.sql
+          +-IF NOT EXIST: 0
+          +-column_desc_list: []
+          +-replica_num: 1
+          +-partition_num: 1
+          +-distribution_list: []
   - id: 3
     desc: CREATE GROUP
     mode: zetasql-unsupport
@@ -26,29 +40,58 @@ cases:
   - id: 4
     desc: DESC table
     sql: DESC t1;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: desc table
+          +-args: t1
   - id: 5
     desc: SHOW TABLE
     sql: SHOW TABLES;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: show tables
+          +-args: <nil>
   - id: 6
     desc: SHOW DATABASES
     sql: SHOW DATABASES;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: show databases
+          +-args: <nil>
   - id: 7
     desc: explain
     sql: explain SELECT * FROM t1 WHERE COL1 > (select avg(COL1) from t1) limit 10;
-    mode: logical-plan-unsupport
   - id: 8
     desc: explain logical
+    tags: ["TODO"]
     sql: explain logical SELECT * FROM t1 WHERE COL1 > (select avg(COL1) from t1) limit 10;
-    mode: logical-plan-unsupport
   - id: 9
     desc: SHOW PROCEDUERS
     sql: SHOW PROCEDURES;
   - id: 10
     desc: DROP PROCEDUER
     sql: DROP PROCEDURE sp1;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: drop procedure
+          +-args: sp1
   - id: 11
     desc: DROP TABLE
     sql: DROP TABLE t1;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: drop table
+          +-args: t1
   - id: 11
     desc: DROP INDEX
     sql: DROP INDEX t1.index1
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: drop index
+          +-args: t1,index1
