--- a/java/pom.xml
+++ b/java/pom.xml
@@ -141,7 +141,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>1.5</version>
+                    <version>3.0.1</version>
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
@@ -149,6 +149,15 @@
                             <goals>
                                 <goal>sign</goal>
                             </goals>
+                            <configuration>
+                                <!-- <useAgent>true</useAgent> -->
+                                <!-- uncomment this if want to specify gpg sign key -->
+                                <!-- <keyname>${gpg.keyname}</keyname> -->
+
+                                <passphraseServerId>gpg.passphrase</passphraseServerId>
+
+                                <!-- <passphrase>${gpg.passphrase}</passphrase> -->
+                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
@@ -209,6 +218,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
