feat: add refresh to apiserver

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,7 +63,7 @@ compile_proto(common ${PROJECT_SOURCE_DIR})
 compile_proto(tablet ${PROJECT_SOURCE_DIR})
 compile_proto(name_server ${PROJECT_SOURCE_DIR})
 compile_proto(sql_procedure ${PROJECT_SOURCE_DIR})
-compile_proto(http ${PROJECT_SOURCE_DIR})
+compile_proto(api_server ${PROJECT_SOURCE_DIR})
 
 compile_lib(fedb_codec codec "")
 compile_lib(fedb_catalog catalog "")
@@ -78,7 +78,7 @@ compile_lib(log log "flags.cc")
 compile_lib(fedb_sdk sdk "")
 compile_lib(apiserver apiserver "")
 
-add_library(fedb_proto STATIC proto/type.pb.cc proto/client.pb.cc proto/common.pb.cc proto/tablet.pb.cc proto/name_server.pb.cc proto/sql_procedure.pb.cc proto/http.pb.cc)
+add_library(fedb_proto STATIC proto/type.pb.cc proto/client.pb.cc proto/common.pb.cc proto/tablet.pb.cc proto/name_server.pb.cc proto/sql_procedure.pb.cc proto/api_server.pb.cc)
 
 add_library(fedb_flags flags.cc)
 
